--- a/contact.html
+++ b/contact.html
@@ -243,12 +243,19 @@
                           name="contact"
                           method="POST"
                           data-netlify="true"
+                          netlify
+                          data-netlify-honeypot="bot-field"
                         >
-                          <!-- ✅ Required hidden input -->
+                          <!-- Required for Netlify -->
                           <input
                             type="hidden"
                             name="form-name"
                             value="contact"
+                          />
+                          <input
+                            type="text"
+                            name="bot-field"
+                            style="display: none"
                           />
 
                           <div class="messages"></div>
@@ -263,8 +270,13 @@
                                   type="text"
                                   name="name"
                                   placeholder="Your full name"
-                                  required="required"
+                                  required
                                 />
+                                <small
+                                  class="error-message"
+                                  style="color: red; display: none"
+                                  >Please enter your name.</small
+                                >
                               </div>
                             </div>
 
@@ -279,8 +291,13 @@
                                   type="email"
                                   name="email"
                                   placeholder="Your email address"
-                                  required="required"
+                                  required
                                 />
+                                <small
+                                  class="error-message"
+                                  style="color: red; display: none"
+                                  >Please enter a valid email.</small
+                                >
                               </div>
                             </div>
 
@@ -294,8 +311,13 @@
                                   type="text"
                                   name="subject"
                                   placeholder="subject"
-                                  required="required"
+                                  required
                                 />
+                                <small
+                                  class="error-message"
+                                  style="color: red; display: none"
+                                  >Please enter a subject.</small
+                                >
                               </div>
                             </div>
 
@@ -326,8 +348,13 @@
                                   name="message"
                                   placeholder="Write your message here..."
                                   rows="4"
-                                  required="required"
+                                  required
                                 ></textarea>
+                                <small
+                                  class="error-message"
+                                  style="color: red; display: none"
+                                  >Please enter a message.</small
+                                >
                               </div>
                               <div class="mt-60">
                                 <button
@@ -342,6 +369,16 @@
                                     />
                                   </span>
                                 </button>
+                              </div>
+                              <div
+                                id="form-feedback"
+                                style="
+                                  color: green;
+                                  display: none;
+                                  margin-top: 15px;
+                                "
+                              >
+                                ✅ Your message has been sent!
                               </div>
                             </div>
                           </div>
@@ -521,6 +558,48 @@
       </div>
     </div>
 
+    <script>
+      const form = document.getElementById("contact-form");
+      const feedback = document.getElementById("form-feedback");
+
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        let hasError = false;
+        const fields = form.querySelectorAll("[required]");
+        form
+          .querySelectorAll(".error-message")
+          .forEach((msg) => (msg.style.display = "none"));
+
+        fields.forEach((field) => {
+          if (!field.value.trim()) {
+            const errorMsg =
+              field.parentElement.querySelector(".error-message");
+            if (errorMsg) errorMsg.style.display = "block";
+            hasError = true;
+          }
+        });
+
+        if (hasError) return;
+
+        const formData = new FormData(form);
+
+        fetch("/", {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded" },
+          body: new URLSearchParams(formData).toString(),
+        })
+          .then(() => {
+            feedback.style.display = "block";
+            form.reset(); // ✅ Clear all fields
+          })
+          .catch(() => {
+            feedback.textContent = "❌ Something went wrong. Please try again.";
+            feedback.style.color = "red";
+            feedback.style.display = "block";
+          });
+      });
+    </script>
     <!-- jQuery -->
     <script src="../common/js/lib/jquery-3.6.0.min.js"></script>
     <script src="../common/js/lib/jquery-migrate-3.4.0.min.js"></script>
