fix/ all pages links & added more project cards

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -72,7 +72,7 @@
   <body>
     <!-- ==================== Start Loading ==================== -->
 
-    <!-- <div class="loader-wrap">
+    <div class="loader-wrap">
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
       </svg>
@@ -88,7 +88,7 @@
           <span>g</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ==================== End Loading ==================== -->
 
@@ -114,7 +114,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#">
+        <a class="logo" href="/">
           <img src="assets/imgs/logo-h.png" alt="logo" />
         </a>
 
@@ -122,7 +122,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
@@ -144,7 +144,7 @@
               </span>
             </div>
           </a>
-          <div class="menu-icon cursor-pointer">
+          <div class="menu-icon cursor-pointer ml-10">
             <span class="icon ti-align-right"></span>
           </div>
         </div>
@@ -154,55 +154,57 @@
     <div class="hamenu">
       <div class="close-menu cursor-pointer ti-close"></div>
       <div class="container-fluid rest">
-        <div class="menu-links">
+        <div class="menu-links" style="justify-content: space-between">
           <ul class="main-menu rest">
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="/" class="link"
                 ><span class="fill-text" data-text="Home Us">Home</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./about.html" class="link"
                 ><span class="fill-text" data-text="About Us">About</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./projects.html" class="link"
                 ><span class="fill-text" data-text="Projects Us"
                   >Projects</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./blogs.html" class="link"
                 ><span class="fill-text" data-text="Blog & Post"
                   >Blog & Post</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./contact.html" class="link"
                 ><span class="fill-text" data-text="Contact Us"
                   >Contact Us</span
                 ></a
               >
             </li>
           </ul>
-          <div>
+          <div class="item">
             <div class="social-icon">
-              <a href="#0">
+              <a href="https://www.linkedin.com/in/miskat-hasan/">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+              >
                 <i class="fa-brands fa-x-twitter"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.facebook.com/profile.php?id=61577382209556">
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-dribbble"></i>
+              <a href="https://app.daily.dev/miskat">
+                <img class="daily-dev" src="assets/imgs/daily-dev.svg" alt="" />
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-behance"></i>
-              </a>
-              <a href="#0">
+              <a href="https://github.com/miskat360/">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
