--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
   <body>
     <!-- ==================== Start Loading ==================== -->
 
-    <!-- <div class="loader-wrap">
+    <div class="loader-wrap">
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
       </svg>
@@ -60,7 +60,7 @@
           <span>g</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ==================== End Loading ==================== -->
 
@@ -86,7 +86,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#">
+        <a class="logo" href="/">
           <img src="assets/imgs/logo-h.png" alt="logo" />
         </a>
 
@@ -94,13 +94,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./projects.html">Projects</a>
+              <a class="nav-link active" href="./projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blogs.html">Blogs</a>
@@ -116,7 +116,7 @@
               </span>
             </div>
           </a>
-          <div class="menu-icon cursor-pointer">
+          <div class="menu-icon cursor-pointer ml-10">
             <span class="icon ti-align-right"></span>
           </div>
         </div>
@@ -126,7 +126,7 @@
     <div class="hamenu">
       <div class="close-menu cursor-pointer ti-close"></div>
       <div class="container-fluid rest">
-        <div class="menu-links">
+        <div class="menu-links" style="justify-content: space-between">
           <ul class="main-menu rest">
             <li>
               <a href="/" class="link"
@@ -134,47 +134,49 @@
               >
             </li>
             <li>
-              <a href="./inner_pages/contact.html" class="link"
+              <a href="./about.html" class="link"
                 ><span class="fill-text" data-text="About Us">About</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./projects.html" class="link"
                 ><span class="fill-text" data-text="Projects Us"
                   >Projects</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./blogs.html" class="link"
                 ><span class="fill-text" data-text="Blog & Post"
                   >Blog & Post</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./contact.html" class="link"
                 ><span class="fill-text" data-text="Contact Us"
                   >Contact Us</span
                 ></a
               >
             </li>
           </ul>
-          <div>
+          <div class="item">
             <div class="social-icon">
-              <a href="#0">
+              <a href="https://www.linkedin.com/in/miskat-hasan/">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+              >
                 <i class="fa-brands fa-x-twitter"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.facebook.com/profile.php?id=61577382209556">
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-dribbble"></i>
+              <a href="https://app.daily.dev/miskat">
+                <img class="daily-dev" src="assets/imgs/daily-dev.svg" alt="" />
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-behance"></i>
-              </a>
-              <a href="#0">
+              <a href="https://github.com/miskat360/">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -182,7 +184,6 @@
         </div>
       </div>
     </div>
-
     <!-- ==================== End Navbar ==================== -->
 
     <div id="smooth-wrapper">
@@ -385,6 +386,162 @@
                       </div>
                     </div>
                   </div>
+                  <div class="items col-lg-6 order-md-2">
+                    <div class="item">
+                      <div class="img">
+                        <img src="assets/imgs/works/work-5.png" alt="" />
+                        <div class="tags">
+                          <a href="#0">React.js</a>
+                          <a href="#0">Framer Motion</a>
+                          <a href="#0">Tailwind CSS</a>
+                        </div>
+                      </div>
+                      <div class="cont mt-30">
+                        <div class="info sub-color mb-10">
+                          <span>Agency</span>
+                          <span class="dot"></span>
+                          <span>Github</span>
+                          <span class="dot"></span>
+                          <span>Live</span>
+                        </div>
+                        <a
+                          class="title d-flex"
+                          href="https://github.com/Miskat360/digital_solution_agency-UI"
+                        >
+                          <h6>Digital Solution Agency</h6>
+                          <div class="img-div">
+                            <img
+                              class="first-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                            <img
+                              class="second-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="items col-lg-6 order-md-2">
+                    <div class="item">
+                      <div class="img">
+                        <img src="assets/imgs/works/work-6.png" alt="" />
+                        <div class="tags">
+                          <a href="#0">HTML</a>
+                          <a href="#0">Tailwind CSS</a>
+                          <a href="#0">JavaScript</a>
+                        </div>
+                      </div>
+                      <div class="cont mt-30">
+                        <div class="info sub-color mb-10">
+                          <span>eCommerce</span>
+                          <span class="dot"></span>
+                          <span>Github</span>
+                          <span class="dot"></span>
+                          <span>Live</span>
+                        </div>
+                        <a
+                          class="title d-flex"
+                          href="https://github.com/Miskat360/PayPi_ecommerce_UI"
+                        >
+                          <h6>PayPi - An eCommerce Platform</h6>
+                          <div class="img-div">
+                            <img
+                              class="first-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                            <img
+                              class="second-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="items col-lg-6 order-md-2">
+                    <div class="item">
+                      <div class="img">
+                        <img src="assets/imgs/works/work-7.png" alt="" />
+                        <div class="tags">
+                          <a href="#0">React.js</a>
+                          <a href="#0">Tailwind CSS</a>
+                          <a href="#0">TypeScript</a>
+                        </div>
+                      </div>
+                      <div class="cont mt-30">
+                        <div class="info sub-color mb-10">
+                          <span>eCommerce</span>
+                          <span class="dot"></span>
+                          <span>Github</span>
+                          <span class="dot"></span>
+                          <span>Live</span>
+                        </div>
+                        <a
+                          class="title d-flex"
+                          href="https://github.com/Miskat360/simple-react-eCommerce-UI"
+                        >
+                          <h6>A Simple React eCommerce UI</h6>
+                          <div class="img-div">
+                            <img
+                              class="first-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                            <img
+                              class="second-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="items col-lg-6 order-md-2">
+                    <div class="item">
+                      <div class="img">
+                        <img src="assets/imgs/works/work-8.png" alt="" />
+                        <div class="tags">
+                          <a href="#0">HTML</a>
+                          <a href="#0">Bootstrap</a>
+                          <a href="#0">jQuery</a>
+                        </div>
+                      </div>
+                      <div class="cont mt-30">
+                        <div class="info sub-color mb-10">
+                          <span>eCommerce</span>
+                          <span class="dot"></span>
+                          <span>Github</span>
+                          <span class="dot"></span>
+                          <span>Live</span>
+                        </div>
+                        <a
+                          class="title d-flex"
+                          href="https://github.com/Miskat360/vesture-eCommerce-html-template"
+                        >
+                          <h6>Modern eCommerce HTML Template</h6>
+                          <div class="img-div">
+                            <img
+                              class="first-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                            <img
+                              class="second-img"
+                              src="../common/imgs/icons/arrow-top-right.svg"
+                              alt=""
+                            />
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                   <!-- <div
                     class="items col-lg-6 order-md-2"
                     style="margin-top: 50px"
@@ -436,23 +593,27 @@
                       </div>
                       <div class="item">
                         <div class="social-icon">
-                          <a href="#0">
+                          <a href="https://www.linkedin.com/in/miskat-hasan/">
                             <i class="fa-brands fa-linkedin-in"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                          >
                             <i class="fa-brands fa-x-twitter"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61577382209556"
+                          >
                             <i class="fa-brands fa-facebook-f"></i>
                           </a>
-                          <a href="#0">
+                          <a href="https://app.daily.dev/miskat">
                             <img
                               class="daily-dev"
                               src="assets/imgs/daily-dev.svg"
                               alt=""
                             />
                           </a>
-                          <a href="#0">
+                          <a href="https://github.com/miskat360/">
                             <i class="fa-brands fa-github"></i>
                           </a>
                         </div>
@@ -479,15 +640,17 @@
                       <div class="links sub-color">
                         <a href="mailto:miskathasan979@gamil.com">E-mail</a>
                         <a href="https://github.com/Miskat360">Phone</a>
-                        <a href="#">Telegram</a>
-                        <a href="#">WhatsApp</a>
+                        <a>Telegram</a>
+                        <a target="_blank" href="https://wa.me/+8801540624828"
+                          >WhatsApp</a
+                        >
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
@@ -495,7 +658,7 @@
                 <div class="container bord-thin-top-light">
                   <div class="row pt-20 pb-10">
                     <div class="col-6">
-                      <a href="#" class="logo">
+                      <a href="/" class="logo">
                         <img src="assets/imgs/logo-f.png" alt="" />
                       </a>
                     </div>
@@ -515,7 +678,7 @@
               <div class="container">
                 <div class="contact-info">
                   <div>
-                    <a href="#" class="logo md-mb80">
+                    <a href="/" class="logo md-mb80">
                       <img src="assets/imgs/logo-f.png" alt="" />
                     </a>
                   </div>
@@ -523,14 +686,10 @@
                     <div class="item">
                       <span class="sub-color">inquiry</span>
                       <div class="links">
-                        <a href="#" class="active">Home</a>
-                        <a href="../inner_pages/portfolio-standard.html"
-                          >About</a
-                        >
-                        <a href="../inner_pages/about.html">Projects</a>
-                        <a href="../inner_pages/blog-standard.html"
-                          >Blogs & Posts</a
-                        >
+                        <a href="/">Home</a>
+                        <a href="./about.html">About</a>
+                        <a href="./projects.html" class="active">Projects</a>
+                        <a href="./blog.html">Blogs & Posts</a>
                       </div>
                     </div>
                     <div class="item">
@@ -540,19 +699,27 @@
                   </div>
                   <div class="offset-lg-5">
                     <div class="social-icon">
-                      <a href="#0">
+                      <a href="https://www.linkedin.com/in/miskat-hasan/">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                      </a>
+                      <a
+                        href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                      >
                         <i class="fa-brands fa-x-twitter"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-instagram"></i>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=61577382209556"
+                      >
+                        <i class="fa-brands fa-facebook-f"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-dribbble"></i>
+                      <a href="https://app.daily.dev/miskat">
+                        <img
+                          class="daily-dev"
+                          src="assets/imgs/daily-dev.svg"
+                          alt=""
+                        />
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-behance"></i>
-                      </a>
-                      <a href="#0">
+                      <a href="https://github.com/miskat360/">
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </div>
@@ -560,7 +727,7 @@
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
