--- a/blogs.html
+++ b/blogs.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Md Miskat Hasan" />
 
     <!-- Title  -->
-    <title>Miskat Hasan</title>
+    <title>Blog - Miskat Hasan</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.png" />
@@ -43,7 +43,7 @@
   <body>
     <!-- ==================== Start Loading ==================== -->
 
-    <!-- <div class="loader-wrap">
+    <div class="loader-wrap">
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
       </svg>
@@ -59,7 +59,7 @@
           <span>g</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ==================== End Loading ==================== -->
 
@@ -85,7 +85,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#">
+        <a class="logo" href="/">
           <img src="assets/imgs/logo-h.png" alt="logo" />
         </a>
 
@@ -93,21 +93,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../inner_pages/about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./blogs.html">Blogs</a>
+              <a class="nav-link active" href="./blogs.html">Blogs</a>
             </li>
           </ul>
         </div>
         <div class="topnav d-flex align-items-center">
-          <a href="../inner_pages/contact.html" class="butn butn-rounded">
+          <a href="./contact.html" class="butn butn-rounded">
             <div class="d-flex align-items-center">
               <span>Contact</span>
               <span class="icon ml-10">
@@ -115,7 +115,7 @@
               </span>
             </div>
           </a>
-          <div class="menu-icon cursor-pointer">
+          <div class="menu-icon cursor-pointer ml-10">
             <span class="icon ti-align-right"></span>
           </div>
         </div>
@@ -125,55 +125,57 @@
     <div class="hamenu">
       <div class="close-menu cursor-pointer ti-close"></div>
       <div class="container-fluid rest">
-        <div class="menu-links">
+        <div class="menu-links" style="justify-content: space-between">
           <ul class="main-menu rest">
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="/" class="link"
                 ><span class="fill-text" data-text="Home Us">Home</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./about.html" class="link"
                 ><span class="fill-text" data-text="About Us">About</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./projects.html" class="link"
                 ><span class="fill-text" data-text="Projects Us"
                   >Projects</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./blogs.html" class="link"
                 ><span class="fill-text" data-text="Blog & Post"
                   >Blog & Post</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./contact.html" class="link"
                 ><span class="fill-text" data-text="Contact Us"
                   >Contact Us</span
                 ></a
               >
             </li>
           </ul>
-          <div>
+          <div class="item">
             <div class="social-icon">
-              <a href="#0">
+              <a href="https://www.linkedin.com/in/miskat-hasan/">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+              >
                 <i class="fa-brands fa-x-twitter"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.facebook.com/profile.php?id=61577382209556">
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-dribbble"></i>
+              <a href="https://app.daily.dev/miskat">
+                <img class="daily-dev" src="assets/imgs/daily-dev.svg" alt="" />
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-behance"></i>
-              </a>
-              <a href="#0">
+              <a href="https://github.com/miskat360/">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -181,7 +183,6 @@
         </div>
       </div>
     </div>
-
     <!-- ==================== End Navbar ==================== -->
 
     <div id="smooth-wrapper">
@@ -208,12 +209,13 @@
                 <div class="col-lg-4 bord">
                   <div class="item md-mb50">
                     <div class="img fit-img mt-30">
-                      <img src="assets/imgs/blog/1.jpg" alt="" />
+                      <img src="assets/imgs/blog/js.webp" alt="" />
                     </div>
                     <div class="cont mt-30">
                       <h6>
-                        <a href="../inner_pages/blog-details.html"
-                          >We’re winner SOTY at CSS Award 2023</a
+                        <a href="./coming-soon.html"
+                          >Supercharge Your JavaScript: 5 Pro Tips and Sneaky
+                          Hacks to Make It Fly</a
                         >
                       </h6>
                       <p>
@@ -226,13 +228,13 @@
                 <div class="col-lg-4 bord">
                   <div class="item md-mb50">
                     <div class="img fit-img mt-30">
-                      <img src="assets/imgs/blog/2.jpg" alt="" />
+                      <img src="assets/imgs/blog/next-js.webp" alt="" />
                     </div>
                     <div class="cont mt-30">
                       <h6>
-                        <a href="../inner_pages/blog-details.html"
-                          >Common UX painpoints in Dashboard-related projects
-                          you must know</a
+                        <a href="./coming-soon.html"
+                          >Next.js 15 for Beginners. Your first step into the
+                          world of full-stack React</a
                         >
                       </h6>
                       <p>
@@ -245,12 +247,12 @@
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="img fit-img mt-30">
-                      <img src="assets/imgs/blog/3.jpg" alt="" />
+                      <img src="assets/imgs/blog/js.gif" alt="" />
                     </div>
                     <div class="cont mt-30">
                       <h6>
-                        <a href="../inner_pages/blog-details.html"
-                          >Visual Website Tips #5</a
+                        <a href="./coming-soon.html"
+                          >Understanding the Fundamentals of JavaScript</a
                         >
                       </h6>
                       <p>
@@ -293,14 +295,10 @@
                   <div class="row">
                     <div class="col-lg-4 col-md-3">
                       <div class="links">
-                        <a href="#" class="active">Home</a>
-                        <a href="../inner_pages/portfolio-standard.html"
-                          >About</a
-                        >
-                        <a href="../inner_pages/about.html">Projects</a>
-                        <a href="../inner_pages/blog-standard.html"
-                          >Blogs & Posts</a
-                        >
+                        <a href="/">Home</a>
+                        <a href="./about.html">About</a>
+                        <a href="./projects.html">Projects</a>
+                        <a href="./blogs.html" class="active">Blogs & Posts</a>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
@@ -309,23 +307,27 @@
                       </div>
                       <div class="item">
                         <div class="social-icon">
-                          <a href="#0">
+                          <a href="https://www.linkedin.com/in/miskat-hasan/">
                             <i class="fa-brands fa-linkedin-in"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                          >
                             <i class="fa-brands fa-x-twitter"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61577382209556"
+                          >
                             <i class="fa-brands fa-facebook-f"></i>
                           </a>
-                          <a href="#0">
+                          <a href="https://app.daily.dev/miskat">
                             <img
                               class="daily-dev"
                               src="assets/imgs/daily-dev.svg"
                               alt=""
                             />
                           </a>
-                          <a href="#0">
+                          <a href="https://github.com/miskat360/">
                             <i class="fa-brands fa-github"></i>
                           </a>
                         </div>
@@ -352,15 +354,17 @@
                       <div class="links sub-color">
                         <a href="mailto:miskathasan979@gamil.com">E-mail</a>
                         <a href="https://github.com/Miskat360">Phone</a>
-                        <a href="#">Telegram</a>
-                        <a href="#">WhatsApp</a>
+                        <a>Telegram</a>
+                        <a target="_blank" href="https://wa.me/+8801540624828"
+                          >WhatsApp</a
+                        >
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
@@ -368,7 +372,7 @@
                 <div class="container bord-thin-top-light">
                   <div class="row pt-20 pb-10">
                     <div class="col-6">
-                      <a href="#" class="logo">
+                      <a href="/" class="logo">
                         <img src="assets/imgs/logo-f.png" alt="" />
                       </a>
                     </div>
@@ -388,7 +392,7 @@
               <div class="container">
                 <div class="contact-info">
                   <div>
-                    <a href="#" class="logo md-mb80">
+                    <a href="/" class="logo md-mb80">
                       <img src="assets/imgs/logo-f.png" alt="" />
                     </a>
                   </div>
@@ -396,14 +400,10 @@
                     <div class="item">
                       <span class="sub-color">inquiry</span>
                       <div class="links">
-                        <a href="#" class="active">Home</a>
-                        <a href="../inner_pages/portfolio-standard.html"
-                          >About</a
-                        >
-                        <a href="../inner_pages/about.html">Projects</a>
-                        <a href="../inner_pages/blog-standard.html"
-                          >Blogs & Posts</a
-                        >
+                        <a href="/">Home</a>
+                        <a href="./about.html">About</a>
+                        <a href="./projects.html">Projects</a>
+                        <a href="./blog.html" class="active">Blogs & Posts</a>
                       </div>
                     </div>
                     <div class="item">
@@ -413,19 +413,27 @@
                   </div>
                   <div class="offset-lg-5">
                     <div class="social-icon">
-                      <a href="#0">
+                      <a href="https://www.linkedin.com/in/miskat-hasan/">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                      </a>
+                      <a
+                        href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                      >
                         <i class="fa-brands fa-x-twitter"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-instagram"></i>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=61577382209556"
+                      >
+                        <i class="fa-brands fa-facebook-f"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-dribbble"></i>
+                      <a href="https://app.daily.dev/miskat">
+                        <img
+                          class="daily-dev"
+                          src="assets/imgs/daily-dev.svg"
+                          alt=""
+                        />
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-behance"></i>
-                      </a>
-                      <a href="#0">
+                      <a href="https://github.com/miskat360/">
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </div>
@@ -433,7 +441,7 @@
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
