--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <body>
     <!-- ==================== Start Loading ==================== -->
 
-    <!-- <div class="loader-wrap">
+    <div class="loader-wrap">
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
       </svg>
@@ -59,7 +59,7 @@
           <span>g</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ==================== End Loading ==================== -->
 
@@ -85,7 +85,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#">
+        <a class="logo" href="/">
           <img src="assets/imgs/logo-h.png" alt="logo" />
         </a>
 
@@ -115,7 +115,7 @@
               </span>
             </div>
           </a>
-          <div class="menu-icon cursor-pointer">
+          <div class="menu-icon cursor-pointer ml-10">
             <span class="icon ti-align-right"></span>
           </div>
         </div>
@@ -125,55 +125,57 @@
     <div class="hamenu">
       <div class="close-menu cursor-pointer ti-close"></div>
       <div class="container-fluid rest">
-        <div class="menu-links">
+        <div class="menu-links" style="justify-content: space-between">
           <ul class="main-menu rest">
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="/" class="link"
                 ><span class="fill-text" data-text="Home Us">Home</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./about.html" class="link"
                 ><span class="fill-text" data-text="About Us">About</span></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./projects.html" class="link"
                 ><span class="fill-text" data-text="Projects Us"
                   >Projects</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./blogs.html" class="link"
                 ><span class="fill-text" data-text="Blog & Post"
                   >Blog & Post</span
                 ></a
               >
             </li>
             <li>
-              <a href="../inner_pages/contact.html" class="link"
+              <a href="./contact.html" class="link"
                 ><span class="fill-text" data-text="Contact Us"
                   >Contact Us</span
                 ></a
               >
             </li>
           </ul>
-          <div>
+          <div class="item">
             <div class="social-icon">
-              <a href="#0">
+              <a href="https://www.linkedin.com/in/miskat-hasan/">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+              >
                 <i class="fa-brands fa-x-twitter"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-instagram"></i>
+              <a href="https://www.facebook.com/profile.php?id=61577382209556">
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-dribbble"></i>
+              <a href="https://app.daily.dev/miskat">
+                <img class="daily-dev" src="assets/imgs/daily-dev.svg" alt="" />
               </a>
-              <a href="#0">
-                <i class="fa-brands fa-behance"></i>
-              </a>
-              <a href="#0">
+              <a href="https://github.com/miskat360/">
                 <i class="fa-brands fa-github"></i>
               </a>
             </div>
@@ -398,14 +400,10 @@
                   <div class="row">
                     <div class="col-lg-4 col-md-3">
                       <div class="links">
-                        <a href="#" class="active">Home</a>
-                        <a href="../inner_pages/portfolio-standard.html"
-                          >About</a
-                        >
-                        <a href="../inner_pages/about.html">Projects</a>
-                        <a href="../inner_pages/blog-standard.html"
-                          >Blogs & Posts</a
-                        >
+                        <a href="/">Home</a>
+                        <a href="./about.html">About</a>
+                        <a href="./projects.html">Projects</a>
+                        <a href="./blogs.html">Blogs & Posts</a>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
@@ -414,23 +412,27 @@
                       </div>
                       <div class="item">
                         <div class="social-icon">
-                          <a href="#0">
+                          <a href="https://www.linkedin.com/in/miskat-hasan/">
                             <i class="fa-brands fa-linkedin-in"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                          >
                             <i class="fa-brands fa-x-twitter"></i>
                           </a>
-                          <a href="#0">
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61577382209556"
+                          >
                             <i class="fa-brands fa-facebook-f"></i>
                           </a>
-                          <a href="#0">
+                          <a href="https://app.daily.dev/miskat">
                             <img
                               class="daily-dev"
                               src="assets/imgs/daily-dev.svg"
                               alt=""
                             />
                           </a>
-                          <a href="#0">
+                          <a href="https://github.com/miskat360/">
                             <i class="fa-brands fa-github"></i>
                           </a>
                         </div>
@@ -457,15 +459,17 @@
                       <div class="links sub-color">
                         <a href="mailto:miskathasan979@gamil.com">E-mail</a>
                         <a href="https://github.com/Miskat360">Phone</a>
-                        <a href="#">Telegram</a>
-                        <a href="#">WhatsApp</a>
+                        <a>Telegram</a>
+                        <a target="_blank" href="https://wa.me/+8801540624828"
+                          >WhatsApp</a
+                        >
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
@@ -473,7 +477,7 @@
                 <div class="container bord-thin-top-light">
                   <div class="row pt-20 pb-10">
                     <div class="col-6">
-                      <a href="#" class="logo">
+                      <a href="/" class="logo">
                         <img src="assets/imgs/logo-f.png" alt="" />
                       </a>
                     </div>
@@ -493,7 +497,7 @@
               <div class="container">
                 <div class="contact-info">
                   <div>
-                    <a href="#" class="logo md-mb80">
+                    <a href="/" class="logo md-mb80">
                       <img src="assets/imgs/logo-f.png" alt="" />
                     </a>
                   </div>
@@ -501,14 +505,10 @@
                     <div class="item">
                       <span class="sub-color">inquiry</span>
                       <div class="links">
-                        <a href="#" class="active">Home</a>
-                        <a href="../inner_pages/portfolio-standard.html"
-                          >About</a
-                        >
-                        <a href="../inner_pages/about.html">Projects</a>
-                        <a href="../inner_pages/blog-standard.html"
-                          >Blogs & Posts</a
-                        >
+                        <a href="/">Home</a>
+                        <a href="./about.html">About</a>
+                        <a href="./projects.html">Projects</a>
+                        <a href="./blog.html">Blogs & Posts</a>
                       </div>
                     </div>
                     <div class="item">
@@ -518,19 +518,27 @@
                   </div>
                   <div class="offset-lg-5">
                     <div class="social-icon">
-                      <a href="#0">
+                      <a href="https://www.linkedin.com/in/miskat-hasan/">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                      </a>
+                      <a
+                        href="https://x.com/HasanMiska9615?t=rpFmzKCFNtTFbTbKX99BxQ&s=03"
+                      >
                         <i class="fa-brands fa-x-twitter"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-instagram"></i>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=61577382209556"
+                      >
+                        <i class="fa-brands fa-facebook-f"></i>
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-dribbble"></i>
+                      <a href="https://app.daily.dev/miskat">
+                        <img
+                          class="daily-dev"
+                          src="assets/imgs/daily-dev.svg"
+                          alt=""
+                        />
                       </a>
-                      <a href="#0">
-                        <i class="fa-brands fa-behance"></i>
-                      </a>
-                      <a href="#0">
+                      <a href="https://github.com/miskat360/">
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </div>
@@ -538,7 +546,7 @@
                 </div>
                 <div class="call-action text-center">
                   <h2 class="title-font">
-                    <a href="../inner_pages/contact.html">Contact Now</a>
+                    <a href="./contact.html">Contact Now</a>
                   </h2>
                 </div>
               </div>
