--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <!-- ==================== Start Loading ==================== -->
 
-    <!-- <div class="loader-wrap">
+    <div class="loader-wrap">
       <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
         <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
       </svg>
@@ -59,7 +59,7 @@
           <span>g</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- ==================== End Loading ==================== -->
 
@@ -93,7 +93,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
@@ -940,7 +940,7 @@
 
             <!-- ==================== Start Brands ==================== -->
 
-            <div class="tech-stack">
+            <div data-bg_color="white" class="color_change_section tech-stack">
               <div class="container bord-thin-bottom">
                 <div class="text-center sec-head">
                   <p>I constantly try to improve</p>
